# SFML-Gui-Creator

./: CMakeLists.txt  CMakeSettings.json  conanfile.txt
src/: Application.cpp  Application.hpp  Entity.cpp  Entity.hpp  SceneNode.cpp  SceneNode.hpp  clock.cpp  clock.hpp  funcs.cpp  funcs.hpp  globals.hpp  main.cpp
